k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hetzner-to-eks-docs
  labels:
    app: hetzner-to-eks-docs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: hetzner-to-eks-docs
